chore(gitignore): ignore caching folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.awcache
+.userscripter-temp
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vim
 
