--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "build-userscript": "webpack --config .userscripter-temp/webpack.config.js",
     "build": "npm run clean && npm run build-webpack-config && npm run build-userscript && npm run clean",
     "clean": "rm -rf .userscripter-temp",
+    "dev": "npm run rebuild-webpack-config && webpack-dev-server --config .userscripter-temp/webpack.config.js",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-    "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
+    "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
+    "rebuild-webpack-config": "npm run clean && npm run build-webpack-config",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@typed/compose": "^1.0.0",
@@ -24,6 +27,8 @@
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-userscript": "^2.5.6"
   }
 }
